2006-06-30  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/TextArea/testAppendText.java: New test.
	* gnu/testlet/java/awt/TextArea/testInsertText.java: New test.
	* gnu/testlet/java/awt/TextArea/testInvalidConstructorValues: New test.
	* gnu/testlet/java/awt/TextArea/testReplaceText.java : New test.

2006-06-30  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/TextArea/constructors.java
	(test): Call testConstructor5().
	
2006-06-30  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/TextArea/constructors.java: New test,
	* gnu/testlet/java/awt/TextField/constructors.java: New test.
	
2006-06-29  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/org/omg/CORBA/ORB/RF11/A_except1Helper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/A_except2Helper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/BHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/B_exceptHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_ObjectHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_anyHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_booleanHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_charHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_doubleHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_floatHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_longHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_octetHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_shortHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_stringHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_ulongHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_ushortHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_exceptHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_sequence_e_ObjectHelper.java,
	* gnu/testlet/org/omg/CORBA/ORB/RF11/C_sequence_e_anyHelper.java,