@@ -1,3 +1,11 @@
+2006-06-30  Mark Wielaard  <mark@klomp.org>
+
+	* Harness.java (initProcess): Initialize TimeoutWatcher with
+	runnerProcess.
+	(runAllTests): Treat IOException as timeout.
+	(TimeoutWatcher.runnerProcess): New field.
+	(TimeoutWatcher.run): Close streams of runnerProcess.
+
 2006-06-30  Tania Bento  <tbento@redhat.com>
 
 	* gnu/testlet/java/awt/TextArea/testAppendText.java: New test.
